gen/libdwf_api.jl


function FDwfAnalogOutNodeEnableSet(hdwf, idxChannel, node, fEnable)
    ccall((:FDwfAnalogOutNodeEnableSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, BOOL), hdwf, idxChannel, node, fEnable)
end

function FDwfAnalogOutNodeEnableGet(hdwf, idxChannel, node, pfEnable)
    ccall((:FDwfAnalogOutNodeEnableGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{BOOL}), hdwf, idxChannel, node, pfEnable)
end

function FDwfAnalogOutNodeFunctionInfo(hdwf, idxChannel, node, pfsfunc)
    ccall((:FDwfAnalogOutNodeFunctionInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cint}), hdwf, idxChannel, node, pfsfunc)
end

function FDwfAnalogOutNodeFunctionSet(hdwf, idxChannel, node, func)
    ccall((:FDwfAnalogOutNodeFunctionSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, FUNC), hdwf, idxChannel, node, func)
end

function FDwfAnalogOutNodeFunctionGet(hdwf, idxChannel, node, pfunc)
    ccall((:FDwfAnalogOutNodeFunctionGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{FUNC}), hdwf, idxChannel, node, pfunc)
end

function FDwfAnalogOutNodeFrequencyInfo(hdwf, idxChannel, node, phzMin, phzMax)
    ccall((:FDwfAnalogOutNodeFrequencyInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, node, phzMin, phzMax)
end

function FDwfAnalogOutNodeFrequencySet(hdwf, idxChannel, node, hzFrequency)
    ccall((:FDwfAnalogOutNodeFrequencySet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Cdouble), hdwf, idxChannel, node, hzFrequency)
end

function FDwfAnalogOutNodeFrequencyGet(hdwf, idxChannel, node, phzFrequency)
    ccall((:FDwfAnalogOutNodeFrequencyGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}), hdwf, idxChannel, node, phzFrequency)
end

function FDwfAnalogOutNodeAmplitudeInfo(hdwf, idxChannel, node, pMin, pMax)
    ccall((:FDwfAnalogOutNodeAmplitudeInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, node, pMin, pMax)
end

function FDwfAnalogOutNodeAmplitudeSet(hdwf, idxChannel, node, vAmplitude)
    ccall((:FDwfAnalogOutNodeAmplitudeSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Cdouble), hdwf, idxChannel, node, vAmplitude)
end

function FDwfAnalogOutNodeAmplitudeGet(hdwf, idxChannel, node, pvAmplitude)
    ccall((:FDwfAnalogOutNodeAmplitudeGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}), hdwf, idxChannel, node, pvAmplitude)
end

function FDwfAnalogOutNodeOffsetInfo(hdwf, idxChannel, node, pMin, pMax)
    ccall((:FDwfAnalogOutNodeOffsetInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, node, pMin, pMax)
end

function FDwfAnalogOutNodeOffsetSet(hdwf, idxChannel, node, vOffset)
    ccall((:FDwfAnalogOutNodeOffsetSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Cdouble), hdwf, idxChannel, node, vOffset)
end

function FDwfAnalogOutNodeOffsetGet(hdwf, idxChannel, node, pvOffset)
    ccall((:FDwfAnalogOutNodeOffsetGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}), hdwf, idxChannel, node, pvOffset)
end

function FDwfAnalogOutNodeSymmetryInfo(hdwf, idxChannel, node, ppercentageMin, ppercentageMax)
    ccall((:FDwfAnalogOutNodeSymmetryInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, node, ppercentageMin, ppercentageMax)
end

function FDwfAnalogOutNodeSymmetrySet(hdwf, idxChannel, node, percentageSymmetry)
    ccall((:FDwfAnalogOutNodeSymmetrySet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Cdouble), hdwf, idxChannel, node, percentageSymmetry)
end

function FDwfAnalogOutNodeSymmetryGet(hdwf, idxChannel, node, ppercentageSymmetry)
    ccall((:FDwfAnalogOutNodeSymmetryGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}), hdwf, idxChannel, node, ppercentageSymmetry)
end

function FDwfAnalogOutNodePhaseInfo(hdwf, idxChannel, node, pdegreeMin, pdegreeMax)
    ccall((:FDwfAnalogOutNodePhaseInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, node, pdegreeMin, pdegreeMax)
end

function FDwfAnalogOutNodePhaseSet(hdwf, idxChannel, node, degreePhase)
    ccall((:FDwfAnalogOutNodePhaseSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Cdouble), hdwf, idxChannel, node, degreePhase)
end

function FDwfAnalogOutNodePhaseGet(hdwf, idxChannel, node, pdegreePhase)
    ccall((:FDwfAnalogOutNodePhaseGet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}), hdwf, idxChannel, node, pdegreePhase)
end

function FDwfAnalogOutNodeDataInfo(hdwf, idxChannel, node, pnSamplesMin, pnSamplesMax)
    ccall((:FDwfAnalogOutNodeDataInfo, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cint}, Ptr{Cint}), hdwf, idxChannel, node, pnSamplesMin, pnSamplesMax)
end

function FDwfAnalogOutNodeDataSet(hdwf, idxChannel, node, rgdData, cdData)
    ccall((:FDwfAnalogOutNodeDataSet, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Cint), hdwf, idxChannel, node, rgdData, cdData)
end

function FDwfAnalogOutCustomAMFMEnableSet(hdwf, idxChannel, fEnable)
    ccall((:FDwfAnalogOutCustomAMFMEnableSet, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fEnable)
end

function FDwfAnalogOutCustomAMFMEnableGet(hdwf, idxChannel, pfEnable)
    ccall((:FDwfAnalogOutCustomAMFMEnableGet, libdwf), BOOL, (HDWF, Cint, Ptr{BOOL}), hdwf, idxChannel, pfEnable)
end

function FDwfAnalogOutReset(hdwf, idxChannel)
    ccall((:FDwfAnalogOutReset, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfAnalogOutConfigure(hdwf, idxChannel, fStart)
    ccall((:FDwfAnalogOutConfigure, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fStart)
end

function FDwfAnalogOutStatus(hdwf, idxChannel, psts)
    ccall((:FDwfAnalogOutStatus, libdwf), BOOL, (HDWF, Cint, Ptr{DwfState}), hdwf, idxChannel, psts)
end

function FDwfAnalogOutNodePlayStatus(hdwf, idxChannel, node, cdDataFree, cdDataLost, cdDataCorrupted)
    ccall((:FDwfAnalogOutNodePlayStatus, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), hdwf, idxChannel, node, cdDataFree, cdDataLost, cdDataCorrupted)
end

function FDwfAnalogOutNodePlayData(hdwf, idxChannel, node, rgdData, cdData)
    ccall((:FDwfAnalogOutNodePlayData, libdwf), BOOL, (HDWF, Cint, AnalogOutNode, Ptr{Cdouble}, Cint), hdwf, idxChannel, node, rgdData, cdData)
end

function FDwfAnalogIOReset(hdwf)
    ccall((:FDwfAnalogIOReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogIOConfigure(hdwf)
    ccall((:FDwfAnalogIOConfigure, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogIOStatus(hdwf)
    ccall((:FDwfAnalogIOStatus, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogIOEnableInfo(hdwf, pfSet, pfStatus)
    ccall((:FDwfAnalogIOEnableInfo, libdwf), BOOL, (HDWF, Ptr{BOOL}, Ptr{BOOL}), hdwf, pfSet, pfStatus)
end

function FDwfAnalogIOEnableSet(hdwf, fMasterEnable)
    ccall((:FDwfAnalogIOEnableSet, libdwf), BOOL, (HDWF, BOOL), hdwf, fMasterEnable)
end

function FDwfAnalogIOEnableGet(hdwf, pfMasterEnable)
    ccall((:FDwfAnalogIOEnableGet, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfMasterEnable)
end

function FDwfAnalogIOEnableStatus(hdwf, pfMasterEnable)
    ccall((:FDwfAnalogIOEnableStatus, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfMasterEnable)
end

function FDwfAnalogIOChannelCount(hdwf, pnChannel)
    ccall((:FDwfAnalogIOChannelCount, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnChannel)
end

function FDwfAnalogIOChannelName(hdwf, idxChannel, szName, szLabel)
    ccall((:FDwfAnalogIOChannelName, libdwf), BOOL, (HDWF, Cint, Ptr{UInt8}, Ptr{UInt8}), hdwf, idxChannel, szName, szLabel)
end

function FDwfAnalogIOChannelInfo(hdwf, idxChannel, pnNodes)
    ccall((:FDwfAnalogIOChannelInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pnNodes)
end

function FDwfAnalogIOChannelNodeName(hdwf, idxChannel, idxNode, szNodeName, szNodeUnits)
    ccall((:FDwfAnalogIOChannelNodeName, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt8}, Ptr{UInt8}), hdwf, idxChannel, idxNode, szNodeName, szNodeUnits)
end

function FDwfAnalogIOChannelNodeInfo(hdwf, idxChannel, idxNode, panalogio)
    ccall((:FDwfAnalogIOChannelNodeInfo, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{ANALOGIO}), hdwf, idxChannel, idxNode, panalogio)
end

function FDwfAnalogIOChannelNodeSetInfo(hdwf, idxChannel, idxNode, pmin, pmax, pnSteps)
    ccall((:FDwfAnalogIOChannelNodeSetInfo, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cint}), hdwf, idxChannel, idxNode, pmin, pmax, pnSteps)
end

function FDwfAnalogIOChannelNodeSet(hdwf, idxChannel, idxNode, value)
    ccall((:FDwfAnalogIOChannelNodeSet, libdwf), BOOL, (HDWF, Cint, Cint, Cdouble), hdwf, idxChannel, idxNode, value)
end

function FDwfAnalogIOChannelNodeGet(hdwf, idxChannel, idxNode, pvalue)
    ccall((:FDwfAnalogIOChannelNodeGet, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cdouble}), hdwf, idxChannel, idxNode, pvalue)
end

function FDwfAnalogIOChannelNodeStatusInfo(hdwf, idxChannel, idxNode, pmin, pmax, pnSteps)
    ccall((:FDwfAnalogIOChannelNodeStatusInfo, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cint}), hdwf, idxChannel, idxNode, pmin, pmax, pnSteps)
end

function FDwfAnalogIOChannelNodeStatus(hdwf, idxChannel, idxNode, pvalue)
    ccall((:FDwfAnalogIOChannelNodeStatus, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cdouble}), hdwf, idxChannel, idxNode, pvalue)
end

function FDwfDigitalIOReset(hdwf)
    ccall((:FDwfDigitalIOReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalIOConfigure(hdwf)
    ccall((:FDwfDigitalIOConfigure, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalIOStatus(hdwf)
    ccall((:FDwfDigitalIOStatus, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalIOOutputEnableInfo(hdwf, pfsOutputEnableMask)
    ccall((:FDwfDigitalIOOutputEnableInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsOutputEnableMask)
end

function FDwfDigitalIOOutputEnableSet(hdwf, fsOutputEnable)
    ccall((:FDwfDigitalIOOutputEnableSet, libdwf), BOOL, (HDWF, UInt32), hdwf, fsOutputEnable)
end

function FDwfDigitalIOOutputEnableGet(hdwf, pfsOutputEnable)
    ccall((:FDwfDigitalIOOutputEnableGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsOutputEnable)
end

function FDwfDigitalIOOutputInfo(hdwf, pfsOutputMask)
    ccall((:FDwfDigitalIOOutputInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsOutputMask)
end

function FDwfDigitalIOOutputSet(hdwf, fsOutput)
    ccall((:FDwfDigitalIOOutputSet, libdwf), BOOL, (HDWF, UInt32), hdwf, fsOutput)
end

function FDwfDigitalIOOutputGet(hdwf, pfsOutput)
    ccall((:FDwfDigitalIOOutputGet, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsOutput)
end

function FDwfDigitalIOInputInfo(hdwf, pfsInputMask)
    ccall((:FDwfDigitalIOInputInfo, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsInputMask)
end

function FDwfDigitalIOInputStatus(hdwf, pfsInput)
    ccall((:FDwfDigitalIOInputStatus, libdwf), BOOL, (HDWF, Ptr{UInt32}), hdwf, pfsInput)
end

function FDwfDigitalIOOutputEnableInfo64(hdwf, pfsOutputEnableMask)
    ccall((:FDwfDigitalIOOutputEnableInfo64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsOutputEnableMask)
end

function FDwfDigitalIOOutputEnableSet64(hdwf, fsOutputEnable)
    ccall((:FDwfDigitalIOOutputEnableSet64, libdwf), BOOL, (HDWF, Culonglong), hdwf, fsOutputEnable)
end

function FDwfDigitalIOOutputEnableGet64(hdwf, pfsOutputEnable)
    ccall((:FDwfDigitalIOOutputEnableGet64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsOutputEnable)
end

function FDwfDigitalIOOutputInfo64(hdwf, pfsOutputMask)
    ccall((:FDwfDigitalIOOutputInfo64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsOutputMask)
end

function FDwfDigitalIOOutputSet64(hdwf, fsOutput)
    ccall((:FDwfDigitalIOOutputSet64, libdwf), BOOL, (HDWF, Culonglong), hdwf, fsOutput)
end

function FDwfDigitalIOOutputGet64(hdwf, pfsOutput)
    ccall((:FDwfDigitalIOOutputGet64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsOutput)
end

function FDwfDigitalIOInputInfo64(hdwf, pfsInputMask)
    ccall((:FDwfDigitalIOInputInfo64, libdwf), BOOL, (HDWF, Ptr{Culonglong}), hdwf, pfsInputMask)
end
